# serverless-fastapi

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml
